Fixed tag overflow and added card resizing

--- a/public/stylesheets/SidewalkGallery/cards.css
+++ b/public/stylesheets/SidewalkGallery/cards.css
@@ -23,6 +23,7 @@
 
 p.label-severity, p.label-tags {
     margin: 5px 0;
+    overflow: hidden;
 }
 
 .validation-button {
